@@ -6,6 +6,7 @@ Admin Menu x.x-x.x, xxxx-xx-xx
 
 Admin Menu 7.x-3.x, xxxx-xx-xx
 ------------------------------
+by markus_petrux, sun: Added API documentation.
 #461264 by sun: Added site/domain as CSS class.
 #451270 by smk-ka, sun: Changed visual indication for uid1.
 by sun: Minor code clean-up.
